--- a/invitation-cards.html
+++ b/invitation-cards.html
@@ -1,224 +1,170 @@
 <!DOCTYPE html>
 <html lang="en">
-
 <head>
-<meta charset="UTF-8">
-<meta name="viewport" content="width=device-width, initial-scale=1">
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Invitation Cards | Shwet Shiva Printing</title>
+    
+    <script src="https://cdn.tailwindcss.com"></script>
+    <link href="https://fonts.googleapis.com/css2?family=Plus+Jakarta+Sans:wght@300;400;600;800&family=Playfair+Display:ital,wght@0,700;1,700&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
 
-<title>Invitation Cards | Birthday, Events, Corporate & Special Occasions</title>
-<meta name="description" content="Premium invitation cards for birthdays, parties, engagements, corporate events, baby showers, housewarming and special occasions. Modern, floral, luxury and custom designs.">
-<meta name="keywords" content="invitation cards, birthday invitation, party cards, engagement invitation, corporate invite, custom invitation printing">
-<link rel="canonical" href="https://www.shwetshivaprinting.com/invitation-cards">
-
-<script src="https://cdn.tailwindcss.com"></script>
-
-<style>
-.fade-in { animation: fadeIn 1.2s ease-in-out; }
-@keyframes fadeIn { from { opacity:0; } to { opacity:1; } }
-
-.slide-up { animation: slideUp 1s ease-out; }
-@keyframes slideUp { from { transform: translateY(20px); opacity: 0; } to { transform: translateY(0); opacity: 1; } }
-
-.zoom-hover:hover { transform: scale(1.03); transition: 0.35s ease; }
-.soft-hover:hover { box-shadow: 0 20px 40px rgba(0,0,0,0.12); transition: 0.3s ease; }
-</style>
-
+    <style>
+        :root {
+            --primary: #6366f1;
+            --dark-bg: #0f172a;
+            --glass: rgba(255, 255, 255, 0.03);
+            --glass-border: rgba(255, 255, 255, 0.1);
+        }
+        body { 
+            font-family: 'Plus Jakarta Sans', sans-serif; 
+            background-color: var(--dark-bg); 
+            color: #f8fafc;
+        }
+        .serif-font { font-family: 'Playfair Display', serif; }
+        .glass-card {
+            background: var(--glass);
+            backdrop-filter: blur(12px);
+            border: 1px solid var(--glass-border);
+            border-radius: 24px;
+        }
+        .text-gradient-purple {
+            background: linear-gradient(to right, #fff, #a855f7);
+            -webkit-background-clip: text;
+            -webkit-text-fill-color: transparent;
+        }
+        .invitation-overlay {
+            background: linear-gradient(0deg, rgba(15,23,42,0.9) 0%, rgba(15,23,42,0) 100%);
+        }
+    </style>
 </head>
+<body>
 
-<body class="bg-gray-50">
+<nav class="sticky top-0 z-50 glass-card mx-4 mt-4 px-6 py-4 flex justify-between items-center backdrop-blur-md">
+    <a href="index.html" class="flex items-center space-x-3">
+        <div class="w-10 h-10 bg-indigo-600 rounded-xl flex items-center justify-center font-bold">SS</div>
+        <span class="text-xl font-extrabold tracking-tight">Shwet Shiva</span>
+    </a>
+    <div class="hidden md:flex space-x-8 font-medium">
+        <a href="index.html" class="hover:text-indigo-400">Home</a>
+        <a href="wedding-cards.html" class="hover:text-indigo-400 text-indigo-400">Products</a>
+        <a href="about.html" class="hover:text-indigo-400">About</a>
+        <a href="contact.html" class="hover:text-indigo-400">Contact</a>
+    </div>
+    <a href="https://wa.me/918087220081" class="bg-indigo-600 px-5 py-2 rounded-full text-sm font-bold">Inquire Now</a>
+</nav>
 
-<!-- NAVIGATION -->
-<header class="sticky top-0 bg-white shadow z-50">
-    <nav class="container mx-auto px-4 py-4 flex justify-between items-center">
-        <a href="index.html" class="flex items-center space-x-3">
-            <div class="w-12 h-12 bg-blue-600 rounded-full flex items-center justify-center text-white text-xl font-bold">SS</div>
-            <div>
-                <h1 class="text-2xl font-bold">Shwet Shiva</h1>
-                <p class="text-sm text-gray-600 -mt-1">Printing Services</p>
-            </div>
-        </a>
+<section class="py-20 px-6 text-center">
+    <h1 class="text-5xl md:text-7xl font-extrabold mb-6 text-gradient-purple serif-font italic">Beautifully Crafted Invites.</h1>
+    <p class="text-gray-400 max-w-2xl mx-auto text-lg leading-relaxed">Whether it's a first birthday or a milestone corporate event, we print invitations that recipients want to keep forever.</p>
+</section>
 
-        <div class="hidden md:flex space-x-8 font-semibold">
-
-            <a href="index.html" class="hover:text-blue-600">Home</a>
-
-            <div class="relative group cursor-pointer">
-                <span class="text-blue-600">Products</span>
-                <div class="absolute hidden group-hover:block bg-white shadow-lg rounded-lg w-56 p-3 space-y-2">
-                    <a href="business-cards.html" class="block hover:text-blue-600">Business Cards</a>
-                    <a href="brochures.html" class="block hover:text-blue-600">Brochures</a>
-                    <a href="banners.html" class="block hover:text-blue-600">Banners</a>
-                    <a href="packaging.html" class="block hover:text-blue-600">Packaging</a>
-                    <a href="labels.html" class="block hover:text-blue-600">Labels</a>
-                    <hr>
-                    <a href="wedding-cards.html" class="block hover:text-blue-600">Wedding Cards</a>
-                    <a href="invitation-cards.html" class="block font-semibold text-blue-600">Invitation Cards</a>
-                    <a href="office-binding.html" class="block hover:text-blue-600">Office Binding</a>
+<section class="container mx-auto px-6 mb-24">
+    <div class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-3 gap-8">
+        
+        <div class="glass-card overflow-hidden group">
+            <div class="relative h-72">
+                <img src="https://picsum.photos/600/600?birthday" class="w-full h-full object-cover group-hover:scale-110 transition duration-700">
+                <div class="absolute inset-0 invitation-overlay flex items-end p-6">
+                    <div>
+                        <h3 class="text-2xl font-bold">Birthday Parties</h3>
+                        <p class="text-gray-400 text-sm">Themed designs for kids & adults</p>
+                    </div>
                 </div>
             </div>
-
-            <a href="services.html" class="hover:text-blue-600">Services</a>
-
-            <div class="relative group cursor-pointer">
-                <span class="hover:text-blue-600">Company</span>
-                <div class="absolute hidden group-hover:block bg-white shadow-lg rounded-lg w-44 p-3 space-y-2">
-                    <a href="about.html" class="block hover:text-blue-600">About Us</a>
-                    <a href="contact.html" class="block hover:text-blue-600">Contact</a>
-                </div>
+            <div class="p-6">
+                <button onclick="openWhatsApp('Birthday Invitation')" class="w-full py-3 rounded-xl bg-white/5 hover:bg-white/10 border border-white/10 transition font-bold text-sm">View Birthday Designs</button>
             </div>
-
         </div>
 
-        <button id="mobileBtn" class="md:hidden text-3xl">&#9776;</button>
-    </nav>
-
-    <!-- MOBILE MENU -->
-    <div id="mobileMenu" class="hidden md:hidden bg-white shadow px-4 pb-4">
-
-        <a href="index.html" class="block py-2">Home</a>
-
-        <details class="py-2">
-            <summary class="cursor-pointer font-medium text-blue-600">Products</summary>
-            <div class="pl-4 space-y-1">
-                <a href="business-cards.html">Business Cards</a>
-                <a href="brochures.html">Brochures</a>
-                <a href="banners.html">Banners</a>
-                <a href="packaging.html">Packaging</a>
-                <a href="labels.html">Labels</a>
-                <a href="wedding-cards.html">Wedding Cards</a>
-                <a href="invitation-cards.html">Invitation Cards</a>
-                <a href="office-binding.html">Office Binding</a>
+        <div class="glass-card overflow-hidden group">
+            <div class="relative h-72">
+                <img src="https://picsum.photos/600/600?corporate" class="w-full h-full object-cover group-hover:scale-110 transition duration-700">
+                <div class="absolute inset-0 invitation-overlay flex items-end p-6">
+                    <div>
+                        <h3 class="text-2xl font-bold">Corporate Events</h3>
+                        <p class="text-gray-400 text-sm">Formal, minimal & premium cardstocks</p>
+                    </div>
+                </div>
             </div>
-        </details>
-
-        <a href="services.html" class="block py-2">Services</a>
-
-        <details class="py-2">
-            <summary class="cursor-pointer font-medium">Company</summary>
-            <div class="pl-4 space-y-1">
-                <a href="about.html">About Us</a>
-                <a href="contact.html">Contact</a>
+            <div class="p-6">
+                <button onclick="openWhatsApp('Corporate Invite')" class="w-full py-3 rounded-xl bg-white/5 hover:bg-white/10 border border-white/10 transition font-bold text-sm">Corporate Catalog</button>
             </div>
-        </details>
+        </div>
+
+        <div class="glass-card overflow-hidden group">
+            <div class="relative h-72">
+                <img src="https://picsum.photos/600/600?baby" class="w-full h-full object-cover group-hover:scale-110 transition duration-700">
+                <div class="absolute inset-0 invitation-overlay flex items-end p-6">
+                    <div>
+                        <h3 class="text-2xl font-bold">Baby Showers</h3>
+                        <p class="text-gray-400 text-sm">Pastel colors & soft-touch finishes</p>
+                    </div>
+                </div>
+            </div>
+            <div class="p-6">
+                <button onclick="openWhatsApp('Baby Shower Invite')" class="w-full py-3 rounded-xl bg-white/5 hover:bg-white/10 border border-white/10 transition font-bold text-sm">Explore Baby Shower</button>
+            </div>
+        </div>
 
     </div>
-</header>
+</section>
+
+<section class="container mx-auto px-6 py-20 border-t border-white/5">
+    <div class="grid lg:grid-cols-2 gap-16 items-center">
+        <div>
+            <h2 class="text-4xl font-bold mb-8 serif-font">The Shwet Shiva <span class="text-indigo-400 italic">Finishing Touch</span></h2>
+            <div class="space-y-6">
+                <div class="flex gap-4">
+                    <div class="w-12 h-12 rounded-full bg-indigo-500/10 flex items-center justify-center text-indigo-500 shrink-0"><i class="fas fa-layer-group"></i></div>
+                    <div>
+                        <h4 class="font-bold text-lg">Multi-Fold Options</h4>
+                        <p class="text-gray-400 text-sm">Single panel, Gate-fold, or Tri-fold designs to fit your story.</p>
+                    </div>
+                </div>
+                <div class="flex gap-4">
+                    <div class="w-12 h-12 rounded-full bg-indigo-500/10 flex items-center justify-center text-indigo-500 shrink-0"><i class="fas fa-magic"></i></div>
+                    <div>
+                        <h4 class="font-bold text-lg">Digital Foil & Varnish</h4>
+                        <p class="text-gray-400 text-sm">Add shiny gold, silver or clear raised textures to names and dates.</p>
+                    </div>
+                </div>
+                <div class="flex gap-4">
+                    <div class="w-12 h-12 rounded-full bg-indigo-500/10 flex items-center justify-center text-indigo-500 shrink-0"><i class="fas fa-envelope-open-text"></i></div>
+                    <div>
+                        <h4 class="font-bold text-lg">Matching Envelopes</h4>
+                        <p class="text-gray-400 text-sm">Custom printed envelopes that match the card's theme perfectly.</p>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <div class="glass-card p-2">
+            <img src="https://picsum.photos/800/600?print" class="rounded-2xl" alt="Printing Detail">
+        </div>
+    </div>
+</section>
+
+<section class="container mx-auto px-6 py-12">
+    <div class="glass-card bg-indigo-600 p-12 text-center relative overflow-hidden">
+        <div class="relative z-10">
+            <h2 class="text-3xl md:text-5xl font-black mb-6">Have a unique idea?</h2>
+            <p class="text-indigo-100 mb-8 max-w-xl mx-auto">Send us a reference image from Pinterest or Instagram and we'll recreate it with premium local materials.</p>
+            <a href="contact.html" class="inline-block bg-white text-indigo-600 px-10 py-4 rounded-2xl font-extrabold transition shadow-xl hover:scale-105">Request Custom Quote</a>
+        </div>
+        <div class="absolute -top-24 -left-24 w-64 h-64 bg-white/10 rounded-full"></div>
+    </div>
+</section>
+
+<footer class="py-12 text-center text-gray-500 text-sm border-t border-white/5">
+    <p>&copy; 2026 Shwet Shiva Printing. Crafting memories, one card at a time.</p>
+</footer>
 
 <script>
-document.getElementById("mobileBtn").onclick = () =>
-    document.getElementById("mobileMenu").classList.toggle("hidden");
+    function openWhatsApp(category) {
+        const msg = `*Invitation Inquiry*%0A---%0A*Type:* ${category}%0A*Request:* Please share some recent samples and the pricing for custom printing.`;
+        window.open(`https://wa.me/918087220081?text=${msg}`, '_blank');
+    }
 </script>
-
-<!-- HERO SECTION -->
-<section class="relative fade-in">
-    <img src="https://picsum.photos/1920/550?random=300"
-         class="w-full h-[420px] object-cover brightness-75">
-
-    <div class="absolute top-0 left-0 w-full h-full flex flex-col justify-center items-center text-white text-center px-6">
-        <h2 class="text-5xl font-extrabold drop-shadow-lg slide-up">Invitation Cards</h2>
-        <p class="mt-4 text-lg max-w-2xl slide-up">
-            Elegant invitations for birthdays, events, engagements, corporate meets & every special celebration.
-        </p>
-    </div>
-</section>
-
-<!-- SECTION — INVITATION TYPES -->
-<section class="container mx-auto px-6 py-16">
-
-    <h3 class="text-3xl font-bold text-center fade-in">Our Invitation Card Collection</h3>
-    <p class="text-center text-gray-600 mt-3 mb-10 fade-in">
-        Choose from modern, floral, minimalistic, luxury or traditional themes.
-    </p>
-
-    <div class="grid md:grid-cols-3 gap-10">
-
-        <div class="bg-white rounded-xl shadow p-5 soft-hover slide-up">
-            <img src="https://picsum.photos/400/260?random=301"
-                 class="rounded-lg mb-4 zoom-hover">
-            <h4 class="text-xl font-semibold">Birthday Invitations</h4>
-            <p class="text-gray-600 mt-2">Colorful, creative and fun invitations for all age groups.</p>
-        </div>
-
-        <div class="bg-white rounded-xl shadow p-5 soft-hover slide-up">
-            <img src="https://picsum.photos/400/260?random=302"
-                 class="rounded-lg mb-4 zoom-hover">
-            <h4 class="text-xl font-semibold">Engagement Invitations</h4>
-            <p class="text-gray-600 mt-2">Stylish & elegant invites with pastel and floral themes.</p>
-        </div>
-
-        <div class="bg-white rounded-xl shadow p-5 soft-hover slide-up">
-            <img src="https://picsum.photos/400/260?random=303"
-                 class="rounded-lg mb-4 zoom-hover">
-            <h4 class="text-xl font-semibold">Corporate Invitations</h4>
-            <p class="text-gray-600 mt-2">Professional invitations for events, seminars & launches.</p>
-        </div>
-
-        <div class="bg-white rounded-xl shadow p-5 soft-hover slide-up">
-            <img src="https://picsum.photos/400/260?random=304"
-                 class="rounded-lg mb-4 zoom-hover">
-            <h4 class="text-xl font-semibold">Baby Shower Invites</h4>
-            <p class="text-gray-600 mt-2">Soft pastel designs with cute illustrations.</p>
-        </div>
-
-        <div class="bg-white rounded-xl shadow p-5 soft-hover slide-up">
-            <img src="https://picsum.photos/400/260?random=305"
-                 class="rounded-lg mb-4 zoom-hover">
-            <h4 class="text-xl font-semibold">Housewarming Invitations</h4>
-            <p class="text-gray-600 mt-2">Simple & clean designs for housewarming ceremonies.</p>
-        </div>
-
-        <div class="bg-white rounded-xl shadow p-5 soft-hover slide-up">
-            <img src="https://picsum.photos/400/260?random=306"
-                 class="rounded-lg mb-4 zoom-hover">
-            <h4 class="text-xl font-semibold">Event & Party Invites</h4>
-            <p class="text-gray-600 mt-2">Bold and stylish invitations for celebrations.</p>
-        </div>
-
-    </div>
-</section>
-
-<!-- CTA SECTION -->
-<section class="bg-blue-600 text-white py-14 text-center slide-up">
-    <h3 class="text-3xl font-bold">Need Custom Invitation Cards?</h3>
-    <p class="mt-3 text-lg">Send us your theme or idea — we design and print it beautifully.</p>
-
-    <a href="contact.html"
-       class="mt-6 inline-block bg-white text-blue-700 px-8 py-3 rounded-lg font-bold shadow-md hover:bg-gray-200">
-       Contact Us
-    </a>
-</section>
-
-<!-- FOOTER -->
-<footer class="bg-gray-900 text-gray-300 py-10">
-    <div class="container mx-auto px-6 grid md:grid-cols-3 gap-10">
-
-        <div>
-            <h4 class="text-xl font-bold mb-3">Shwet Shiva Printing</h4>
-            <p>Custom printing solutions for weddings, events & businesses.</p>
-        </div>
-
-        <div>
-            <h4 class="text-xl font-bold mb-3">Products</h4>
-            <ul class="space-y-1">
-                <li><a href="business-cards.html" class="hover:text-white">Business Cards</a></li>
-                <li><a href="brochures.html" class="hover:text-white">Brochures</a></li>
-                <li><a href="banners.html" class="hover:text-white">Banners</a></li>
-                <li><a href="packaging.html" class="hover:text-white">Packaging</a></li>
-                <li><a href="labels.html" class="hover:text-white">Labels</a></li>
-                <li><a href="wedding-cards.html" class="hover:text-white">Wedding Cards</a></li>
-                <li><a href="invitation-cards.html" class="hover:text-white">Invitation Cards</a></li>
-                <li><a href="office-binding.html" class="hover:text-white">Office Binding</a></li>
-            </ul>
-        </div>
-
-        <div>
-            <h4 class="text-xl font-bold mb-3">Contact</h4>
-            <p>Email: infoshwetshivaprinting@gmail.com</p>
-            <p>Phone: +91 80872 20081</p>
-        </div>
-
-    </div>
-</footer>
 
 </body>
 </html>
