--- a/labels.html
+++ b/labels.html
@@ -1,229 +1,171 @@
-<!DOCTYPE html>
+<!<!DOCTYPE html>
 <html lang="en">
-
 <head>
-<meta charset="UTF-8">
-<meta name="viewport" content="width=device-width, initial-scale=1">
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Custom Labels & Stickers | Shwet Shiva Printing</title>
+    
+    <script src="https://cdn.tailwindcss.com"></script>
+    <link href="https://fonts.googleapis.com/css2?family=Plus+Jakarta+Sans:wght@300;400;600;800&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
 
-<!-- SEO -->
-<title>Custom Labels & Stickers | Product, Bottle, Jar & Packaging Labels</title>
-<meta name="description" content="High-quality printed stickers and labels for products, bottles, jars, packaging, branding, cosmetics, and more. Gloss, matte, waterproof & premium finish.">
-<meta name="keywords" content="label printing, stickers, product labels, packaging labels, bottle labels, waterproof labels, custom stickers">
-<link rel="canonical" href="https://www.shwetshivaprinting.com/labels">
-
-<!-- OG -->
-<meta property="og:title" content="Custom Labels & Stickers | Product, Bottle, Jar & Packaging Labels">
-<meta property="og:description" content="Premium waterproof and high-quality custom labels for all business needs.">
-<meta property="og:image" content="https://picsum.photos/1200/630?random=60">
-
-<!-- Tailwind -->
-<script src="https://cdn.tailwindcss.com"></script>
-
-<!-- Animations -->
-<style>
-    .fade-in { animation: fadeIn 1.2s ease-in-out; }
-    @keyframes fadeIn { from { opacity:0; } to { opacity:1; } }
-
-    .slide-up { animation: slideUp 0.9s ease-out; }
-    @keyframes slideUp { from { transform:translateY(20px); opacity:0; }
-                         to { transform:translateY(0); opacity:1; } }
-
-    .zoom-hover:hover {
-        transform: scale(1.04);
-        transition: 0.35s ease;
-    }
-
-    .soft-hover:hover {
-        box-shadow: 0 20px 40px rgba(0,0,0,0.12);
-        transition: 0.3s ease;
-    }
-</style>
+    <style>
+        :root {
+            --primary: #f59e0b; /* Amber/Yellow for high visibility */
+            --dark-bg: #0f172a;
+            --glass: rgba(255, 255, 255, 0.03);
+            --glass-border: rgba(255, 255, 255, 0.1);
+        }
+        body { 
+            font-family: 'Plus Jakarta Sans', sans-serif; 
+            background-color: var(--dark-bg); 
+            color: #f8fafc;
+        }
+        .glass-card {
+            background: var(--glass);
+            backdrop-filter: blur(12px);
+            border: 1px solid var(--glass-border);
+            border-radius: 24px;
+        }
+        .text-gradient-amber {
+            background: linear-gradient(to right, #fff, #f59e0b);
+            -webkit-background-clip: text;
+            -webkit-text-fill-color: transparent;
+        }
+        .label-feature-pill {
+            background: rgba(245, 158, 11, 0.1);
+            color: #f59e0b;
+            padding: 4px 12px;
+            border-radius: 99px;
+            font-size: 0.75rem;
+            font-weight: 700;
+            text-transform: uppercase;
+        }
+    </style>
 </head>
+<body>
 
-<body class="bg-gray-50">
+<nav class="sticky top-0 z-50 glass-card mx-4 mt-4 px-6 py-4 flex justify-between items-center backdrop-blur-md">
+    <a href="index.html" class="flex items-center space-x-3">
+        <div class="w-10 h-10 bg-amber-500 rounded-xl flex items-center justify-center font-bold text-white">SS</div>
+        <span class="text-xl font-extrabold tracking-tight">Shwet Shiva</span>
+    </a>
+    <div class="hidden md:flex space-x-8 font-medium text-sm">
+        <a href="index.html" class="hover:text-amber-400">Home</a>
+        <a href="services.html" class="text-amber-400">Products</a>
+        <a href="about.html" class="hover:text-amber-400">About</a>
+        <a href="contact.html" class="hover:text-amber-400">Contact</a>
+    </div>
+    <a href="https://wa.me/918087220081" class="bg-amber-500 hover:bg-amber-600 px-5 py-2 rounded-full text-sm font-bold transition">Order Samples</a>
+</nav>
 
-<!-- ===================================================
- NAVIGATION
-==================================================== -->
-<header class="sticky top-0 bg-white shadow z-50">
-    <nav class="container mx-auto px-4 py-4 flex justify-between items-center">
-        <a href="index.html" class="flex items-center space-x-3">
-            <div class="w-12 h-12 bg-blue-600 rounded-full flex items-center justify-center text-white text-xl font-bold">SS</div>
-            <div>
-                <h1 class="text-2xl font-bold">Shwet Shiva</h1>
-                <p class="text-sm text-gray-600 -mt-1">Printing Services</p>
+<section class="py-20 px-6 text-center">
+    <h1 class="text-5xl md:text-7xl font-extrabold mb-6 text-gradient-amber tracking-tight">Stick Your Brand Everywhere.</h1>
+    <p class="text-gray-400 max-w-2xl mx-auto text-lg">Industrial-grade custom labels and stickers with precision die-cutting and waterproof finishing.</p>
+</section>
+
+<section class="container mx-auto px-6 mb-24">
+    <div class="grid grid-cols-1 md:grid-cols-3 gap-8">
+        
+        <div class="glass-card group p-6">
+            <div class="rounded-2xl overflow-hidden mb-6 aspect-square bg-white/5">
+                <img src="https://picsum.photos/600/600?label1" class="w-full h-full object-cover group-hover:scale-110 transition duration-700 opacity-80">
             </div>
-        </a>
-
-        <div class="hidden md:flex space-x-8 font-semibold">
-            <a href="index.html" class="hover:text-blue-600">Home</a>
-
-            <!-- Products Dropdown -->
-            <div class="relative group cursor-pointer">
-                <span class="text-blue-600">Products</span>
-                <div class="absolute hidden group-hover:block bg-white shadow-lg rounded-lg w-56 p-3 space-y-2">
-                    <a href="business-cards.html" class="block hover:text-blue-600">Business Cards</a>
-                    <a href="brochures.html" class="block hover:text-blue-600">Brochures</a>
-                    <a href="banners.html" class="block hover:text-blue-600">Banners</a>
-                    <a href="packaging.html" class="block hover:text-blue-600">Packaging</a>
-                    <a href="labels.html" class="block hover:text-blue-600">Labels</a>
-                    <hr>
-                    <a href="wedding-cards.html" class="block font-semibold text-blue-600">Wedding Cards</a>
-                    <a href="invitation-cards.html" class="block hover:text-blue-600">Invitation Cards</a>
-                    <a href="office-binding.html" class="block hover:text-blue-600">Office Binding</a>
-                </div>
+            <div class="flex gap-2 mb-3">
+                <span class="label-feature-pill">Waterproof</span>
+                <span class="label-feature-pill">Full Color</span>
             </div>
-
-            <a href="services.html" class="hover:text-blue-600">Services</a>
-
-            <div class="relative group cursor-pointer">
-                <span class="hover:text-blue-600">Company</span>
-                <div class="absolute hidden group-hover:block bg-white shadow-lg rounded-lg w-44 p-3 space-y-2">
-                    <a href="about.html" class="block hover:text-blue-600">About Us</a>
-                    <a href="contact.html" class="block hover:text-blue-600">Contact</a>
-                </div>
-            </div>
+            <h3 class="text-2xl font-bold mb-2">Bottle & Jar Labels</h3>
+            <p class="text-gray-500 text-sm mb-6">High-adhesive vinyl labels for cosmetics, food, and beverages. Resists oil and moisture.</p>
+            <button onclick="requestQuote('Bottle Labels')" class="w-full py-3 bg-white/5 hover:bg-amber-500 transition-colors font-bold rounded-xl border border-white/10">Configure Sizes</button>
         </div>
 
-        <button id="mobileBtn" class="md:hidden text-3xl">&#9776;</button>
-    </nav>
-
-    <!-- Mobile -->
-    <div id="mobileMenu" class="hidden md:hidden bg-white shadow px-4 pb-4">
-        <a href="index.html" class="block py-2">Home</a>
-
-        <details class="py-2">
-            <summary class="cursor-pointer font-medium text-blue-600">Products</summary>
-            <div class="pl-4 space-y-1">
-                <a href="business-cards.html">Business Cards</a>
-                <a href="brochures.html">Brochures</a>
-                <a href="banners.html">Banners</a>
-                <a href="packaging.html">Packaging</a>
-                <a href="labels.html">Labels</a>
-                <a href="wedding-cards.html">Wedding Cards</a>
-                <a href="invitation-cards.html">Invitation Cards</a>
-                <a href="office-binding.html">Office Binding</a>
+        <div class="glass-card group p-6">
+            <div class="rounded-2xl overflow-hidden mb-6 aspect-square bg-white/5">
+                <img src="https://picsum.photos/600/600?sticker2" class="w-full h-full object-cover group-hover:scale-110 transition duration-700 opacity-80">
             </div>
-        </details>
-
-        <a href="services.html" class="block py-2">Services</a>
-
-        <details class="py-2">
-            <summary class="cursor-pointer font-medium">Company</summary>
-            <div class="pl-4 space-y-1">
-                <a href="about.html">About Us</a>
-                <a href="contact.html">Contact</a>
+            <div class="flex gap-2 mb-3">
+                <span class="label-feature-pill">Any Shape</span>
+                <span class="label-feature-pill">Matte/Gloss</span>
             </div>
-        </details>
+            <h3 class="text-2xl font-bold mb-2">Die-Cut Stickers</h3>
+            <p class="text-gray-500 text-sm mb-6">Logo stickers and promotional decals cut to any custom shape. Perfect for branding and laptop skins.</p>
+            <button onclick="requestQuote('Die-Cut Stickers')" class="w-full py-3 bg-white/5 hover:bg-amber-500 transition-colors font-bold rounded-xl border border-white/10">Select Shape</button>
+        </div>
+
+        <div class="glass-card group p-6">
+            <div class="rounded-2xl overflow-hidden mb-6 aspect-square bg-white/5">
+                <img src="https://picsum.photos/600/600?seal3" class="w-full h-full object-cover group-hover:scale-110 transition duration-700 opacity-80">
+            </div>
+            <div class="flex gap-2 mb-3">
+                <span class="label-feature-pill">Bulk Pack</span>
+                <span class="label-feature-pill">Easy Peel</span>
+            </div>
+            <h3 class="text-2xl font-bold mb-2">Security & Box Seals</h3>
+            <p class="text-gray-500 text-sm mb-6">Paper and vinyl seals for shipping boxes and pouches to ensure tamper-proof delivery.</p>
+            <button onclick="requestQuote('Packaging Seals')" class="w-full py-3 bg-white/5 hover:bg-amber-500 transition-colors font-bold rounded-xl border border-white/10">Volume Pricing</button>
+        </div>
+
     </div>
-</header>
+</section>
+
+<section class="container mx-auto px-6 py-20 border-t border-white/5">
+    <h3 class="text-3xl font-bold mb-10 text-center">Choose the Right Material</h3>
+    <div class="glass-card overflow-x-auto">
+        <table class="w-full text-left">
+            <thead>
+                <tr class="border-b border-white/10 bg-white/5">
+                    <th class="p-6 font-bold">Material Type</th>
+                    <th class="p-6 font-bold">Durability</th>
+                    <th class="p-6 font-bold">Best Use Case</th>
+                    <th class="p-6 font-bold">Finish</th>
+                </tr>
+            </thead>
+            <tbody class="text-gray-400">
+                <tr class="border-b border-white/5">
+                    <td class="p-6 font-bold text-white">White Vinyl (PVC)</td>
+                    <td class="p-6"><span class="text-green-400 font-bold">High</span> (Waterproof)</td>
+                    <td class="p-6">Bottles, Outdoor stickers, Cosmetics</td>
+                    <td class="p-6 italic">Gloss/Matte</td>
+                </tr>
+                <tr class="border-b border-white/5">
+                    <td class="p-6 font-bold text-white">Transparent Vinyl</td>
+                    <td class="p-6"><span class="text-green-400 font-bold">High</span> (Waterproof)</td>
+                    <td class="p-6">Glass jars, clear containers</td>
+                    <td class="p-6 italic">Ultra Clear</td>
+                </tr>
+                <tr>
+                    <td class="p-6 font-bold text-white">Chromed Paper</td>
+                    <td class="p-6"><span class="text-amber-400 font-bold">Medium</span> (Splash-proof)</td>
+                    <td class="p-6">Box seals, shipping, budget branding</td>
+                    <td class="p-6 italic">Semi-Gloss</td>
+                </tr>
+            </tbody>
+        </table>
+    </div>
+</section>
+
+<section class="container mx-auto px-6 py-12">
+    <div class="glass-card bg-amber-600 p-12 text-center relative overflow-hidden">
+        <div class="relative z-10">
+            <h2 class="text-4xl font-black mb-4">Bulk Order Discount</h2>
+            <p class="text-amber-100 mb-8 max-w-lg mx-auto">Ordering more than 5,000 labels? Speak to our wholesale manager for special contract pricing.</p>
+            <a href="tel:+918087220081" class="bg-white text-amber-600 px-10 py-4 rounded-2xl font-extrabold transition shadow-xl hover:scale-105 inline-block">Call +91 80872 20081</a>
+        </div>
+        <div class="absolute -bottom-20 -left-20 w-64 h-64 bg-black/10 rounded-full"></div>
+    </div>
+</section>
+
+<footer class="py-12 border-t border-white/5 text-center text-gray-600 text-xs">
+    <p>&copy; 2026 Shwet Shiva Printing. Expert Adhesive Solutions.</p>
+</footer>
 
 <script>
-document.getElementById("mobileBtn").onclick = () => {
-    document.getElementById("mobileMenu").classList.toggle("hidden");
-};
+    function requestQuote(item) {
+        const message = `*Label Inquiry*%0A---%0A*Item:* ${item}%0A*Request:* I am looking for a quote on custom labels. Please provide pricing for 500/1000 units.`;
+        window.open(`https://wa.me/918087220081?text=${message}`, '_blank');
+    }
 </script>
-
-<!-- ===================================================
- HERO
-==================================================== -->
-<section class="relative fade-in">
-    <img src="https://picsum.photos/1920/550?random=61"
-         class="w-full h-[420px] object-cover brightness-75">
-
-    <div class="absolute top-0 left-0 w-full h-full flex flex-col justify-center items-center text-white text-center px-6">
-        <h2 class="text-5xl font-extrabold drop-shadow-lg slide-up">Custom Labels & Stickers</h2>
-        <p class="mt-4 text-lg max-w-2xl slide-up">
-            Create stunning, waterproof and durable labels for packaging, branding, bottles, jars and retail.
-        </p>
-    </div>
-</section>
-
-<!-- ===================================================
- LABEL TYPES
-==================================================== -->
-<section class="container mx-auto px-6 py-16">
-
-    <h3 class="text-3xl font-bold fade-in text-center">Types of Labels We Print</h3>
-    <p class="text-center text-gray-600 mt-3 mb-10 fade-in">
-        From product labels to packaging stickers — we deliver premium quality that your customers will love.
-    </p>
-
-    <div class="grid md:grid-cols-3 gap-10">
-
-        <!-- Product Labels -->
-        <div class="bg-white rounded-xl shadow p-5 soft-hover slide-up">
-            <img src="https://picsum.photos/400/260?random=62"
-                 class="rounded-lg mb-4 zoom-hover">
-            <h4 class="text-xl font-semibold">Product Labels</h4>
-            <p class="text-gray-600 mt-2">Ideal for branding boxes, pouches, jars, bottles and retail products.</p>
-        </div>
-
-        <!-- Bottle & Jar Labels -->
-        <div class="bg-white rounded-xl shadow p-5 soft-hover slide-up">
-            <img src="https://picsum.photos/400/260?random=63"
-                 class="rounded-lg mb-4 zoom-hover">
-            <h4 class="text-xl font-semibold">Bottle & Jar Labels</h4>
-            <p class="text-gray-600 mt-2">Perfect waterproof labels for beverages, oils, cosmetics and food items.</p>
-        </div>
-
-        <!-- Packaging Stickers -->
-        <div class="bg-white rounded-xl shadow p-5 soft-hover slide-up">
-            <img src="https://picsum.photos/400/260?random=64"
-                 class="rounded-lg mb-4 zoom-hover">
-            <h4 class="text-xl font-semibold">Packaging Stickers</h4>
-            <p class="text-gray-600 mt-2">Custom stickers ideal for parcels, branding, sealing and promotions.</p>
-        </div>
-
-    </div>
-</section>
-
-<!-- ===================================================
- CTA
-==================================================== -->
-<section class="bg-blue-600 text-white py-14 text-center slide-up">
-    <h3 class="text-3xl font-bold">Need Custom Labels?</h3>
-    <p class="mt-3 text-lg">We print labels in any size, shape and quantity — fully personalized for your brand.</p>
-
-    <a href="contact.html"
-       class="mt-6 inline-block bg-white text-blue-700 px-8 py-3 rounded-lg font-bold shadow-md hover:bg-gray-200">
-       Contact Us
-    </a>
-</section>
-
-<!-- ===================================================
- FOOTER
-==================================================== -->
-<footer class="bg-gray-900 text-gray-300 py-10">
-    <div class="container mx-auto px-6 grid md:grid-cols-3 gap-10">
-
-        <div>
-            <h4 class="text-xl font-bold mb-3">Shwet Shiva Printing</h4>
-            <p>Premium printing services with fast delivery & top quality.</p>
-        </div>
-
-        <div>
-            <h4 class="text-xl font-bold mb-3">Products</h4>
-            <ul class="space-y-1">
-                <li><a href="business-cards.html" class="hover:text-white">Business Cards</a></li>
-                <li><a href="brochures.html" class="hover:text-white">Brochures</a></li>
-                <li><a href="banners.html" class="hover:text-white">Banners</a></li>
-                <li><a href="packaging.html" class="hover:text-white">Packaging</a></li>
-                <li><a href="labels.html" class="hover:text-white">Labels</a></li>
-                  <li><a href="wedding-cards.html" class="hover:text-white">Wedding Cards</a></li>
-                <li><a href="invitation-cards.html" class="hover:text-white">Invitation Cards</a></li>
-                <li><a href="office-binding.html" class="hover:text-white">Office Binding</a></li>
-            </ul>
-        </div>
-
-        <div>
-            <h4 class="text-xl font-bold mb-3">Contact</h4>
-           <p>Email: infoshwetshivaprinting@gmail.com</p>
-            <p>Phone: +91 80872 20081</p>
-        </div>
-
-    </div>
-</footer>
 
 </body>
 </html>
