--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
                     <a href="packaging.html" class="block p-2 hover:bg-white/5 rounded-lg transition text-xs font-normal">Packaging</a>
                     <a href="labels.html" class="block p-2 hover:bg-white/5 rounded-lg transition text-xs font-normal">Labels</a>
                     <hr class="border-white/5 my-1">
-                    <a href="wedding-cards.html" class="block p-2 text-blue-400 hover:bg-white/5 rounded-lg transition text-xs font-normal">Wedding Cards</a>
+                    <a href="wedding-cards.html" class="block p-2 hover:bg-white/5 rounded-lg transition text-xs font-normal">Wedding Cards</a>
                     <a href="invitation-cards.html" class="block p-2 hover:bg-white/5 rounded-lg transition text-xs font-normal">Invitation Cards</a>
                     <a href="office-binding.html" class="block p-2 hover:bg-white/5 rounded-lg transition text-xs font-normal">Office Binding</a>
                 </div>
@@ -95,7 +95,7 @@
                 <a href="banners.html" class="text-gray-400 text-sm">Banners</a>
                 <a href="packaging.html" class="text-gray-400 text-sm">Packaging</a>
                 <a href="labels.html" class="text-gray-400 text-sm">Labels</a>
-                <a href="wedding-cards.html" class="text-blue-400 text-sm">Wedding Cards</a>
+                <a href="wedding-cards.html" class="text-gray-400 text-sm">Wedding Cards</a>
                 <a href="invitation-cards.html" class="text-gray-400 text-sm">Invitation Cards</a>
                 <a href="office-binding.html" class="text-gray-400 text-sm">Office Binding</a>
             </div>
@@ -243,10 +243,7 @@
         <div class="col-span-1 md:col-span-2">
             <h4 class="text-white text-2xl font-bold mb-4">Shwet Shiva Printing</h4>
             <p class="max-w-sm mb-6">Elevating brands through high-precision printing and innovative design solutions since 2010.</p>
-            <div class="flex space-x-4">
-                <a href="#" class="w-10 h-10 rounded-full glass-card flex items-center justify-center hover:text-blue-400"><i class="fab fa-facebook"></i></a>
-                <a href="#" class="w-10 h-10 rounded-full glass-card flex items-center justify-center hover:text-blue-400"><i class="fab fa-instagram"></i></a>
-            </div>
+            
         </div>
         <div>
             <h5 class="text-white font-bold mb-4 uppercase text-xs tracking-widest">Contact</h5>
