--- a/brochures.html
+++ b/brochures.html
@@ -257,27 +257,30 @@
     </div>
 </section>
 
-<footer class="border-t border-gray-800 py-12 mt-24 bg-black/30">
-    <div class="container mx-auto px-6 text-center md:text-left grid md:grid-cols-3 gap-12 text-gray-400">
+<footer class="border-t border-gray-800 py-12 mt-12 bg-black/30">
+    <div class="container mx-auto px-6 grid md:grid-cols-3 gap-12">
         <div>
-            <h4 class="text-white font-bold mb-4">Shwet Shiva Printing</h4>
-            <p class="text-sm">Excellence in high-volume commercial printing since 2010.</p>
-        </div>
-        <div>
-            <h4 class="text-white font-bold mb-4">Other Services</h4>
-            <div class="flex flex-col gap-2 text-sm">
-                <a href="banners.html" class="hover:text-blue-500 transition">Banner Printing</a>
-                <a href="office-binding.html" class="hover:text-blue-500 transition">Office Binding</a>
+            <div class="flex items-center space-x-3 mb-6">
+                <div class="w-8 h-8 bg-blue-600 rounded-lg flex items-center justify-center font-bold text-xs">SS</div>
+                <span class="text-lg font-bold">Shwet Shiva</span>
             </div>
+            <p class="text-gray-500">Premium Printing & Packaging solutions for modern brands.</p>
         </div>
         <div>
-            <h4 class="text-white font-bold mb-4">Get Support</h4>
-            <p class="text-sm">infoshwetshivaprinting@gmail.com</p>
-            <p class="text-sm mt-2">+91 80872 20081</p>
+            <h4 class="font-bold mb-6 uppercase text-xs tracking-widest text-blue-500">Quick Links</h4>
+            <ul class="space-y-3 text-gray-400">
+                <li><a href="office-binding.html" class="hover:text-white transition">Office Binding</a></li>
+                <li><a href="#" class="hover:text-white transition">Business Cards</a></li>
+                <li><a href="#" class="hover:text-white transition">Packaging</a></li>
+            </ul>
+        </div>
+        <div>
+            <h4 class="font-bold mb-6 uppercase text-xs tracking-widest text-blue-500">Contact Info</h4>
+            <p class="text-gray-400 mb-2"><i class="fas fa-envelope mr-2"></i> infoshwetshivaprinting@gmail.com</p>
+            <p class="text-gray-400"><i class="fas fa-phone mr-2"></i> +91 80872 20081</p>
         </div>
     </div>
 </footer>
-
 <script>
     function sendOrder() {
         const fold = document.querySelector('input[name="fold"]:checked').value;
