--- a/wedding-cards.html
+++ b/wedding-cards.html
@@ -72,7 +72,7 @@
                     <a href="packaging.html" class="block p-2 hover:bg-white/5 rounded-lg transition text-xs font-normal">Packaging</a>
                     <a href="labels.html" class="block p-2 hover:bg-white/5 rounded-lg transition text-xs font-normal">Labels</a>
                     <hr class="border-white/5 my-1">
-                    <a href="wedding-cards.html" class="block p-2 text-blue-400 hover:bg-white/5 rounded-lg transition text-xs font-normal">Wedding Cards</a>
+                    <a href="wedding-cards.html" class="block p-2 hover:bg-white/5 rounded-lg transition text-xs font-normal">Wedding Cards</a>
                     <a href="invitation-cards.html" class="block p-2 hover:bg-white/5 rounded-lg transition text-xs font-normal">Invitation Cards</a>
                     <a href="office-binding.html" class="block p-2 hover:bg-white/5 rounded-lg transition text-xs font-normal">Office Binding</a>
                 </div>
@@ -258,9 +258,29 @@
     </div>
 </section>
 
-<footer class="py-12 text-center text-stone-400 text-xs border-t border-stone-200">
-    <p class="serif text-stone-600 text-lg mb-4">Shwet Shiva Printing Studio</p>
-    <p>&copy; 2026 Crafted with love for your special day.</p>
+<footer class="border-t border-gray-800 py-12 mt-12 bg-black/30">
+    <div class="container mx-auto px-6 grid md:grid-cols-3 gap-12">
+        <div>
+            <div class="flex items-center space-x-3 mb-6">
+                <div class="w-8 h-8 bg-blue-600 rounded-lg flex items-center justify-center font-bold text-xs">SS</div>
+                <span class="text-lg font-bold">Shwet Shiva</span>
+            </div>
+            <p class="text-gray-500">Premium Printing & Packaging solutions for modern brands.</p>
+        </div>
+        <div>
+            <h4 class="font-bold mb-6 uppercase text-xs tracking-widest text-blue-500">Quick Links</h4>
+            <ul class="space-y-3 text-gray-400">
+                <li><a href="office-binding.html" class="hover:text-white transition">Office Binding</a></li>
+                <li><a href="#" class="hover:text-white transition">Business Cards</a></li>
+                <li><a href="#" class="hover:text-white transition">Packaging</a></li>
+            </ul>
+        </div>
+        <div>
+            <h4 class="font-bold mb-6 uppercase text-xs tracking-widest text-blue-500">Contact Info</h4>
+            <p class="text-gray-400 mb-2"><i class="fas fa-envelope mr-2"></i> infoshwetshivaprinting@gmail.com</p>
+            <p class="text-gray-400"><i class="fas fa-phone mr-2"></i> +91 80872 20081</p>
+        </div>
+    </div>
 </footer>
 
 </body>
