--- a/about.html
+++ b/about.html
@@ -61,7 +61,7 @@
                     <a href="packaging.html" class="block p-2 hover:bg-white/5 rounded-lg transition text-xs font-normal">Packaging</a>
                     <a href="labels.html" class="block p-2 hover:bg-white/5 rounded-lg transition text-xs font-normal">Labels</a>
                     <hr class="border-white/5 my-1">
-                    <a href="wedding-cards.html" class="block p-2 text-blue-400 hover:bg-white/5 rounded-lg transition text-xs font-normal">Wedding Cards</a>
+                    <a href="wedding-cards.html" class="block p-2 hover:bg-white/5 rounded-lg transition text-xs font-normal">Wedding Cards</a>
                     <a href="invitation-cards.html" class="block p-2 hover:bg-white/5 rounded-lg transition text-xs font-normal">Invitation Cards</a>
                     <a href="office-binding.html" class="block p-2 hover:bg-white/5 rounded-lg transition text-xs font-normal">Office Binding</a>
                 </div>
@@ -88,7 +88,7 @@
                 <a href="banners.html" class="text-gray-400 text-sm">Banners</a>
                 <a href="packaging.html" class="text-gray-400 text-sm">Packaging</a>
                 <a href="labels.html" class="text-gray-400 text-sm">Labels</a>
-                <a href="wedding-cards.html" class="text-blue-400 text-sm">Wedding Cards</a>
+                <a href="wedding-cards.html" class="text-gray-400 text-sm">Wedding Cards</a>
                 <a href="invitation-cards.html" class="text-gray-400 text-sm">Invitation Cards</a>
                 <a href="office-binding.html" class="text-gray-400 text-sm">Office Binding</a>
             </div>
