--- a/wedding-cards.html
+++ b/wedding-cards.html
@@ -99,7 +99,7 @@
                 <a href="banners.html" class="text-gray-400 text-sm">Banners</a>
                 <a href="packaging.html" class="text-gray-400 text-sm">Packaging</a>
                 <a href="labels.html" class="text-gray-400 text-sm">Labels</a>
-                <a href="wedding-cards.html" class="text-blue-400 text-sm">Wedding Cards</a>
+                <a href="wedding-cards.html" class="text-gray-400 text-sm">Wedding Cards</a>
                 <a href="invitation-cards.html" class="text-gray-400 text-sm">Invitation Cards</a>
                 <a href="office-binding.html" class="text-gray-400 text-sm">Office Binding</a>
             </div>
