--- a/services.html
+++ b/services.html
@@ -251,30 +251,26 @@
     </div>
 </section>
 
-<footer class="border-t border-gray-800 py-12 mt-12 bg-black/30">
-    <div class="container mx-auto px-6 grid md:grid-cols-3 gap-12">
-        <div>
-            <div class="flex items-center space-x-3 mb-6">
-                <div class="w-8 h-8 bg-blue-600 rounded-lg flex items-center justify-center font-bold text-xs">SS</div>
-                <span class="text-lg font-bold">Shwet Shiva</span>
-            </div>
-            <p class="text-gray-500">Premium Printing & Packaging solutions for modern brands.</p>
+<footer class="border-t border-gray-800 py-16 bg-black/50">
+    <div class="container mx-auto px-6 grid md:grid-cols-4 gap-12 text-gray-400">
+        <div class="col-span-1 md:col-span-2">
+            <h4 class="text-white text-2xl font-bold mb-4">Shwet Shiva Printing</h4>
+            <p class="max-w-sm mb-6">Elevating brands through high-precision printing and innovative design solutions since 2010.</p>
+            
         </div>
         <div>
-            <h4 class="font-bold mb-6 uppercase text-xs tracking-widest text-blue-500">Quick Links</h4>
-            <ul class="space-y-3 text-gray-400">
-                <li><a href="office-binding.html" class="hover:text-white transition">Office Binding</a></li>
-                <li><a href="#" class="hover:text-white transition">Business Cards</a></li>
-                <li><a href="#" class="hover:text-white transition">Packaging</a></li>
-            </ul>
+            <h5 class="text-white font-bold mb-4 uppercase text-xs tracking-widest">Contact</h5>
+            <p class="text-sm mb-2">+91 80872 20081</p>
+            <p class="text-sm">infoshwetshivaprinting@gmail.com</p>
         </div>
         <div>
-            <h4 class="font-bold mb-6 uppercase text-xs tracking-widest text-blue-500">Contact Info</h4>
-            <p class="text-gray-400 mb-2"><i class="fas fa-envelope mr-2"></i> infoshwetshivaprinting@gmail.com</p>
-            <p class="text-gray-400"><i class="fas fa-phone mr-2"></i> +91 80872 20081</p>
+            <h5 class="text-white font-bold mb-4 uppercase text-xs tracking-widest">Office</h5>
+            <p class="text-sm leading-relaxed">Randive galli, Purw, Kasaba Bawada, Kolhapur, Maharashtra 416006</p>
         </div>
     </div>
+    <div class="text-center mt-16 text-xs text-gray-600">
+        &copy; 2026 Shwet Shiva Printing Studios. All rights reserved.
+    </div>
 </footer>
-
 </body>
 </html>
